# phil

./: .gitignore  README.md  default.nix  hindley-milner.cabal  hindley-milner.nix  phil.cabal  phil.nix  shell.nix
app/compiler/: Compiler.hs
app/interpreter/: Interpreter.hs
nix/: indentation-core.nix  indentation-trifecta.nix  parsers.nix  trifecta.nix
src/: Lambda.hs
src/Control/Monad/: Fresh.hs
src/Control/Monad/Fresh/: Class.hs
src/Lambda/: AST.hs  Core.hs  ErrorMsg.hs  Exception.hs  Interpreter.hs  Lexer.x  ModuleInfo.hs  PHP.hs  Parser.y  Sugar.hs  Translation.hs  Typecheck.hs  Typeclasses.hs
src/Lambda/AST/: Binding.hs  Definitions.hs  Expr.hs  Modules.hs
src/Lambda/AST/Modules/: ModuleName.hs
src/Lambda/Core/: AST.hs  Codegen.hs  Kind.hs  Kinds.hs  Typecheck.hs  Typeclasses.hs
src/Lambda/Core/AST/: Binding.hs  Definitions.hs  Evidence.hs  Expr.hs  Identifier.hs  InstanceHead.hs  Kinds.hs  Lens.hs  Literal.hs  Pattern.hs  ProdDecl.hs  Types.hs
src/Lambda/Core/Kinds/: Kind.hs  KindError.hs
src/Lambda/Core/Typecheck/: Entailment.hs  Substitution.hs  Unification.hs
src/Lambda/Desugar/: Decl.hs
src/Lambda/Lexer/: LexError.hs
src/Lambda/PHP/: AST.hs  CodeGen.hs  Import.hs
src/Lambda/Parser/: ParseError.hs
src/Lambda/Sugar/: SyntaxError.hs
src/Lambda/Typecheck/: Constraints.hs  Definition.hs  Entailment.hs  Kind.hs  KindError.hs  Module.hs  TC.hs  TypeError.hs  TypeclassEntry.hs  Unification.hs
src/Phil/: AST.hs  ErrorMsg.hs  Exception.hs  Lexer.x  PHP.hs  Parser.hs  Parser.y  Sugar.hs  Typecheck.hs  Typeclasses.hs
src/Phil/AST/: Binding.hs  Definitions.hs  Expr.hs
src/Phil/Core/: Codegen.hs  Kinds.hs
src/Phil/Core/AST/: Binding.hs  Definitions.hs  Expr.hs  Identifier.hs  InstanceHead.hs  Lens.hs  Literal.hs  Pattern.hs  ProdDecl.hs  Types.hs
src/Phil/Core/Kinds/: Kind.hs  KindError.hs
src/Phil/Lexer/: LexError.hs
src/Phil/PHP/: AST.hs
src/Phil/Parser/: ParseError.hs
src/Phil/Sugar/: SyntaxError.hs
src/Phil/Typecheck/: Entailment.hs  TypeError.hs  Unification.hs
test/: Spec.hs
test/Lambda/Test/: Arbitrary.hs
test/Phil/Test/: Arbitrary.hs
test/Test/Lambda/Core/: Kind.hs  Kinds.hs  Typecheck.hs  Typeclasses.hs
test/Test/Phil/Core/: Kinds.hs  Typecheck.hs  Typeclasses.hs
test/files/: MyModule.lam  Test.lam  applicative.lam  applicative.lam.php  case.lam  case.lam.php  monad.lam  monad.lam.php  test.lam  test.lam.php
test/files/SubModule/: Mod.lam
