name:                hindley-milner
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hindley-milner#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lambda
                     , Lambda.Lexer
                     , Lambda.Parser
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , array
                     , containers
                     , lens
                     , mtl
                     , semigroups
  default-language:    Haskell2010
  build-tools:         alex
                     , happy

executable lambdai
  hs-source-dirs:      app/interpreter
  main-is:             Interpreter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , free
                     , haskeline
                     , hindley-milner
                     , lens
                     , mtl
                     , semigroups
  default-language:    Haskell2010

test-suite hindley-milner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hindley-milner
                     , QuickCheck
                     , semigroups
  default-language:    Haskell2010
  other-modules:       Lambda.Test.Arbitrary
  build-tools:         alex
                     , happy

source-repository head
  type:     git
  location: https://github.com/githubuser/hindley-milner
