name:                phil
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://gitlab.com/lightandlight/phil
license:             BSD3
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          example@example.com copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Fresh
                     , Control.Monad.Fresh.Class
                     , Phil.Core.AST.Binding
                     , Phil.Core.AST.Definitions
                     , Phil.Core.AST.Expr
                     , Phil.Core.AST.Identifier
                     , Phil.Core.AST.InstanceHead
                     , Phil.Core.AST.Types
                     , Phil.Core.AST.Lens
                     , Phil.Core.AST.Literal
                     , Phil.Core.AST.Pattern
                     , Phil.Core.AST.ProdDecl
                     , Phil.Core.Codegen
                     , Phil.Core.Kinds
                     , Phil.Core.Kinds.Kind
                     , Phil.Core.Kinds.KindError
                     , Phil.AST
                     , Phil.AST.Binding
                     , Phil.AST.Definitions
                     , Phil.AST.Expr
                     , Phil.ErrorMsg
                     , Phil.Exception
                     , Phil.Lexer
                     , Phil.Lexer.LexError
                     , Phil.Parser
                     , Phil.Parser.ParseError
                     , Phil.PHP
                     , Phil.PHP.AST
                     , Phil.Sugar
                     , Phil.Sugar.SyntaxError
                     , Phil.Typecheck
                     , Phil.Typecheck.Entailment
                     , Phil.Typecheck.Unification
                     , Phil.Typecheck.TypeError
                     , Phil.Typeclasses
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , array
                     , containers
                     , dlist
                     , free
                     , lens
                     , mtl
                     , pretty
                     , semigroups
  default-language:    Haskell2010
  build-tools:         alex
                     , happy

executable phi
  hs-source-dirs:      app/interpreter
  main-is:             Interpreter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , free
                     , haskeline
                     , phil
                     , lens
                     , mtl
                     , pretty
                     , semigroups
  default-language:    Haskell2010

executable phc
  hs-source-dirs:      app/compiler
  main-is:             Compiler.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bifunctors
                     , phil
                     , lens
                     , mtl
                     , optparse-applicative
                     , pretty
  default-language:    Haskell2010

test-suite phil-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , phil
                     , hspec
                     , lens
                     , mtl
                     , QuickCheck
                     , semigroups
  default-language:    Haskell2010
  other-modules:       Phil.Test.Arbitrary
                     , Test.Phil.Core.Kinds
                     , Test.Phil.Core.Typecheck
                     , Test.Phil.Core.Typeclasses
  build-tools:         alex
                     , happy

source-repository head
  type:     git
  location: https://gitlab.com/lightandlight/phil
