name:                phil
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://gitlab.com/lightandlight/phil
license:             BSD3
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          example@example.com copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Fresh
                     , Control.Monad.Fresh.Class
                     , Phil.Core.AST.Binding
                     , Phil.Core.AST.Definitions
                     , Phil.Core.AST.Expr
                     , Phil.Core.AST.Identifier
                     , Phil.Core.AST.InstanceHead
                     , Phil.Core.AST.Types
                     , Phil.Core.AST.Lens
                     , Phil.Core.AST.Literal
                     , Phil.Core.AST.Pattern
                     , Phil.Core.AST.ProdDecl
                     , Phil.Core.Codegen
                     , Phil.Core.Kinds
                     , Phil.Core.Kinds.Kind
                     , Phil.Core.Kinds.KindError
                     , Phil.AST
                     , Phil.AST.Binding
                     , Phil.AST.Definitions
                     , Phil.AST.Expr
                     , Phil.ErrorMsg
                     , Phil.Exception
                     , Phil.Parser
                     , Phil.PHP
                     , Phil.PHP.AST
                     , Phil.Sugar
                     , Phil.Sugar.SyntaxError
                     , Phil.Typecheck
                     , Phil.Typecheck.Entailment
                     , Phil.Typecheck.Unification
                     , Phil.Typecheck.TypeError
                     , Phil.Typeclasses
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , array
                     , containers
                     , dlist
                     , free
                     , indentation-trifecta ==0.0.2
                     , lens
                     , mtl
                     , parsers >=0.12.7
                     , ansi-wl-pprint
                     , trifecta
                     , unordered-containers
                     , semigroups
                     , text
  default-language:    Haskell2010

executable phi
  hs-source-dirs:      app/interpreter
  main-is:             Interpreter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , free
                     , haskeline
                     , phil
                     , lens
                     , mtl
                     , ansi-wl-pprint
                     , semigroups
                     , trifecta
                     , text
  default-language:    Haskell2010

executable phc
  hs-source-dirs:      app/compiler
  main-is:             Compiler.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bifunctors
                     , phil
                     , lens
                     , mtl
                     , optparse-applicative
                     , ansi-wl-pprint
                     , trifecta
                     , text
  default-language:    Haskell2010

test-suite phil-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , phil
                     , hspec
                     , lens
                     , mtl
                     , QuickCheck
                     , semigroups
                     , text
  default-language:    Haskell2010
  other-modules:       Phil.Test.Arbitrary
                     , Test.Phil.Core.Kinds
                     , Test.Phil.Core.Typecheck
                     , Test.Phil.Core.Typeclasses
source-repository head
  type:     git
  location: https://gitlab.com/lightandlight/phil
